--- a/assets/Index.html
+++ b/assets/Index.html
@@ -9,14 +9,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;700&display=swap"
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
-    <link rel="stylesheet" href="assets/css/style.css">
-  
-    <link rel="icon" type="image/x-icon" href="assets/images/logotipo.png">
+  
+  <link rel="stylesheet" href="assets/css/style.css">
+  
+  <link rel="icon" type="image/x-icon" href="assets/images/logotipo.png">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark px-4">
+  <nav class="navbar navbar-expand-lg navbar-dark px-4">
     <a class="navbar-brand fw-bold" href="#" style="font-size: 28px;">ConInvest</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
       <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
     </div>
   </nav>
 
-    <section class="container py-5 text-center">
+  <section class="container py-5 text-center">
     <h1 class="mb-5">Bem-vindo à ConInvest</h1>
     <p class="lead" style="text-align: justify;">
       Na ConInvest, acreditamos que investir deve ser simples, seguro e acessível para todos. Por isso, desenvolvemos
@@ -53,14 +53,14 @@
     </p>
   </section>
 
-    <div id="investimentosCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div id="investimentosCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
 
-            <div class="carousel-item active bg-success text-white text-center py-5">
+      <div class="carousel-item active bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/tesouro_direto.png" alt="Tesouro Direto" class="img-fluid rounded shadow-lg">
+              <img src="assets/images/tesouro_direto.png" alt="Tesouro Direto" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center; text-align: center;">Renda Fixa</h2>
@@ -73,11 +73,11 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
+      <div class="carousel-item bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/cdb.png" alt="CDB" class="img-fluid rounded shadow-lg">
+              <img src="assets/images/cdb.png" alt="CDB" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Fixa</h2>
@@ -90,11 +90,11 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
+      <div class="carousel-item bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
-          / <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/lci.png" alt="LCI" class="img-fluid rounded shadow-lg">
+                        <div class="col-12 col-md-4 mb-4 mb-md-0"> 
+              <img src="assets/images/lci.png" alt="LCI" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Fixa</h2>
@@ -107,11 +107,11 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
+      <div class="carousel-item bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/lca.png" alt="LCA" class="img-fluid rounded shadow-lg">
+              <img src="assets/images/lca.png" alt="LCA" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Fixa</h2>
@@ -124,12 +124,12 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
+      <div class="carousel-item bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/acoes.jpg" alt="Ações" class="img-fluid rounded shadow-lg">
-            </div>
+              <img src="assets/images/acoes.jpg" alt="Ações" class="img-fluid rounded shadow-lg">
+E           </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Variável</h2>
               <br><br><br>
@@ -141,17 +141,17 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
-        <div class="container">
+      <div class="carousel-item bg-success text-white text-center py-5">
+ANTERIORMENTE         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/fundos_imobiliarios.jpg" alt="Fundos Imobiliários"
+              <img src="assets/images/fundos_imobiliarios.jpg" alt="Fundos Imobiliários"
                 class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
-              <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Variável</h2>
+DOM               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Variável</h2>
               <br><br><br>
-              <h4>Fundos Imobiliários</h4>
+        t     <h4>Fundos Imobiliários</h4>
               <p style="text-align: justify;">Invista em imóveis sem precisar comprá-los. Receba rendimentos mensais de
                 aluguéis e aproveite a valorização do mercado imobiliário.</p>
             </div>
@@ -159,36 +159,36 @@
         </div>
       </div>
 
-            <div class="carousel-item bg-success text-white text-center py-5">
+      <div class="carousel-item bg-success text-white text-center py-5">
         <div class="container">
           <div class="row align-items-start justify-content-center">
             <div class="col-12 col-md-4 mb-4 mb-md-0">
-                            <img src="assets/images/criptomoeda.jpg" alt="Criptomoedas" class="img-fluid rounded shadow-lg">
+              <img src="assets/images/criptomoeda.jpg" alt="Criptomoedas" class="img-fluid rounded shadow-lg">
             </div>
             <div class="col-12 col-md-8 d-flex flex-column mt-0 text-white text-start">
               <h2 class="mb-3" style="font-weight:700; text-align: center;">Renda Variável</h2>
-              <br><br><br>
-              <h4>Criptomoedas</h4>
-              <p style="text-align: justify;">Negocie ativos digitais inovadores com alta liquidez e oportunidades de
-                ganhos. Diversifique sua carteira com tecnologia blockchain.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+            	<br><br><br>
+        s     <h4>Criptomoedas</h4>
+            	<p style="text-align: justify;">Negocie ativos digitais inovadores com alta liquidez e oportunidades de
+              	ganhos. Diversifique sua carteira com tecnologia blockchain.</p>
+        	  </div>
+      	  </div>
+    	  </div>
+    	</div>
 
-    </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#investimentosCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon"></span>
-      <span class="visually-hidden">Anterior</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#investimentosCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon"></span>
-      <span class="visually-hidden">Próximo</span>
-    </button>
   </div>
 
-    <section class="container my-4 mb-2">
+  	<button class="carousel-control-prev" type="button" data-bs-target="#investimentosCarousel" data-bs-slide="prev">
+    	<span class="carousel-control-prev-icon"></span>
+    	<span class="visually-hidden">Anterior</span>
+  	</button>
+  	<button class="carousel-control-next" type="button" data-bs-target="#investimentosCarousel" data-bs-slide="next">
+    	<span class="carousel-control-next-icon"></span>
+    	<span class="visually-hidden">Próximo</span>
+  	</button>
+  </div>
+
+  <section class="container my-4 mb-2">
     <h2 class="fw-bold text-center">Investimentos Promissores para 2025</h2>
     <p class="lead text-justify">
       Em 2025, alguns ativos chamam atenção por sua performance e potencial de crescimento. Veja os principais:
@@ -222,13 +222,13 @@
   </section>
 
 
-    <footer class="text-center text-white">
+  <footer class="text-center text-white">
     <div class="container">
       <p class="mb-1 fw-bold">ConInvest © 2025 - Todos os direitos reservados</p>
-s     <p class="mb-0">Contato: suporte@coninvest.com.br</p>
+            <p class="mb-0">Contato: suporte@coninvest.com.br</p>
     </div>
   </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
